# pokelookup

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: lookup.rs  main.rs  utils.rs
src/lookup/: abilities.rs  dex.rs  eggs.rs  encounters.rs  evolutions.rs  genders.rs  matchups.rs  moves.rs  pokedex.rs  types.rs  varieties.rs
src/utils/: cli.rs  enums.rs  helpers.rs
