[package]
name = "pokelookup"
description = "Look up pokemon details through PokeAPI."
version = "0.9.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
itertools = "0.14.0"
rustemon = "4.2.0"
serde_json = "1.0.140"
tokio = {version="1.46.1", features=["full"]}
ureq = "3.0.12"

[features]
default = ["clap/wrap_help"]
