[package]
name = "pokelookup"
description = "Look up pokemon details through PokeAPI."
authors = ["Justin Marquez"]
version = "1.2.0"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jemarq04/pokelookup"
repository = "https://github.com/jemarq04/pokelookup"
keywords = ["pokemon", "pokeapi", "pokedex"]

[dependencies]
clap = { version = "=4.5.44", features = ["derive"] }
futures = "0.3.31"
itertools = "0.14.0"
rustemon = "=4.3.0"
serde_json = "1.0.142"
tokio = {version="1.47.1", features=["full"]}
ureq = "3.0.12"

[features]
default = ["clap/wrap_help"]
