[package]
name = "pokelookup"
description = "Look up pokemon details through PokeAPI."
authors = ["Justin Marquez"]
version = "1.3.5"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jemarq04/pokelookup"
repository = "https://github.com/jemarq04/pokelookup"
keywords = ["pokemon", "pokeapi", "pokedex"]

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
futures = "0.3.31"
itertools = "0.14.0"
open = { version = "5.3.2", optional = true }
rustemon = "4.4.0"
serde_json = "1.0.142"
tokio = { version="1.47.1", features=["full"] }
ureq = "3.0.12"

[features]
default = ["clap/wrap_help"]
web = ["dep:open"]
